Subsurf modifier with Freestyle edges #40457

Closed
opened 2014-06-01 15:10:02 +02:00 by Fazekas Laszlo · 6 comments
Member

System Information
Operating system and graphics card

Blender Version
Broken: 2.71 git edfd989
Worked: (optional)

Short description of error
The freestyle edge marks are missing when the subsurf modifier is following another boolean or subsurf.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

I really hate myself to report this but there is still a freestyle related bug remained in the subdivision surface modifier. If it is following another boolean or subsurf modifier(s) in the chain, the freestyle mark is still missing when rendering. In the edit mode however, it is there.

Steps: On the default cube, mark some edges as Freestyle and add two subsurf modifiers to the chain. Render the result. No Freestyle edges. If you disable any of these modifiers so there is only one of them, it is working. If you put a boolean modifier before the subsurf, the result is the same.

subsurf_and_freestyle.blend

**System Information** Operating system and graphics card **Blender Version** Broken: 2.71 git edfd989 Worked: (optional) **Short description of error** The freestyle edge marks are missing when the subsurf modifier is following another boolean or subsurf. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I really hate myself to report this but there is still a freestyle related bug remained in the subdivision surface modifier. If it is following another boolean or subsurf modifier(s) in the chain, the freestyle mark is still missing when rendering. In the edit mode however, it is there. Steps: On the default cube, mark some edges as Freestyle and add two subsurf modifiers to the chain. Render the result. No Freestyle edges. If you disable any of these modifiers so there is only one of them, it is working. If you put a boolean modifier before the subsurf, the result is the same. [subsurf_and_freestyle.blend](https://archive.blender.org/developer/F92261/subsurf_and_freestyle.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @totoro-4

Added subscriber: @totoro-4

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by 3e6c734eaa

This issue was referenced by 3e6c734eaa3ed3a12dccc84a3c39ecda050ccb37

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3e6c734eaa.

Closed by commit 3e6c734eaa.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40457
No description provided.