Fix T40457: Subsurf modifier with Freestyle edges

You can't use ORIG index as an index to copy CD from source DM.